# telegram-lead-bot

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
bot/: Dockerfile
